Added array tree data structures

--- a/Exercises/Development/TreeIndexing.html
+++ b/Exercises/Development/TreeIndexing.html
@@ -9,18 +9,20 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <style>
+    #colorizedBST .jsavtree .jsavnode {
+      min-height: 25px;
+      max-height: 25px;
+      min-width: 25px;
+      max-width: 25px;
+    }
+
+    .jsavcontainer, .jsavcontainer .jsavcanvas {
+      min-height: 250px;
+    }
+  </style>
 </head>
-
 <body>
-
-<style>
-  #colorizedBST .jsavtree .jsavnode {
-    min-height: 25px;
-    max-height: 25px;
-    min-width: 25px;
-    max-width: 25px;
-  }
-</style>
 
 <script src="../../AV/Development/TreeIndexingPRO.js"></script>
 
