Refactored interpolationSearch exercise.

--- a/AV/Development/interpolationSearchPRO.html
+++ b/AV/Development/interpolationSearchPRO.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Interpolation Search</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" /> -->
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <style>
     .jsavcontainer {
