--- a/AV/Development/bintreeAV.html
+++ b/AV/Development/bintreeAV.html
@@ -5,17 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <style>
-    #container {
-      width: 780px;
-      height: 800px;
-    }
-
-    .avcontainer {
-      width: 700px;
-      height: 505px;
-    }
-  </style>
+  <link rel="stylesheet" href="bintreeAV.css" type="text/css" />
 </head>
 
 <body>
