Improved rehashing exercise.

--- a/AV/Development/rehashingPRO.html
+++ b/AV/Development/rehashingPRO.html
@@ -17,6 +17,12 @@
     .jsavvalue {
       height: 32px;
     }
+    .jsavindex.jsavarrow:before {
+      left: 12px;
+    }
+    .jsavindex.jsavarrow .jsavvalue {
+      background-color: #fb7;
+    }
   </style>
 </head>
 
