--- a/AV/Development/SelfOrgTransposePro.html
+++ b/AV/Development/SelfOrgTransposePro.html
@@ -6,7 +6,7 @@ Written by Junyang Chen and Cliff Shaffer
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Self Organinzing Lists Move to Front</title>
+  <title>Self Organinzing Lists Transpose</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -283,8 +283,7 @@ Written by Junyang Chen and Cliff Shaffer
 
     // correct answer
     if (search_index>1){
-    answerArr.splice(search_index, 1);
-    answerArr.splice(1, 0, search_value);
+    arrSwap(answerArr, search_index-1, search_index);
   }
 
 
@@ -292,6 +291,15 @@ Written by Junyang Chen and Cliff Shaffer
       console.log(answerArr[i]);
     }
   }
+
+  //function that swaps two elements on the array
+  function arrSwap(array, index1, index2) {
+    var temp = array[index1];
+    array[index1] = array[index2];
+    array[index2] = temp;
+  }
+
+
 
   // Check user's answer for correctness: User's array must match answer
   function checkAnswer(arr_size) {
@@ -347,7 +355,7 @@ Written by Junyang Chen and Cliff Shaffer
       <div id = "xx"></div>
       <div id = "yy"></div>
       <p class="problem" id = "test">
-        Your task in this exercise is to show the behavior for self organizing lists using the move to front method. You will need to 
+        Your task in this exercise is to show the behavior for self organizing lists using the transpose method. You will need to 
         demonstrate what happens when you serach for th 
        <b><var>search_value</var></b>. 
         you will need to manually rederect the poiters of the nedes 
@@ -355,7 +363,12 @@ Written by Junyang Chen and Cliff Shaffer
       </p>
       <div class="question">
         <p>
-          To change a pointer, click on its box (on the right
+          To move an element value from one node to another, click on it (to
+          highlight it), then click on the element position in the node where
+          you want it to go. You can insert the new value
+          <b><var>search_value</var></b> into a highlighted node by clicking the
+          "Insert" button. You can create a new link node by clicking the
+          "NewNode" button. To change a pointer, click on its box (on the right
           side of the node) to highlight it, then click on the node that you
           want it to point to.
         </p>
@@ -378,10 +391,10 @@ Written by Junyang Chen and Cliff Shaffer
       <div class="hints">
         <p>
           You want to reproduce the behavior of the self organizing list's
-          move to front method. Try starting finding the value in the list.
+          the transpose method. Try starting finding the value in the list.
         </p>
         <p>
-        	Now you need to make it point to the correct node, and 
+          Now you need to make it point to the correct node, and 
           make the rest of the nodes point to the other 
           acconrding nodes.
         </p>
