concept map in popup window and parsing glossary.rst

--- a/AV/Development/conceptMap.html
+++ b/AV/Development/conceptMap.html
@@ -32,7 +32,10 @@
   -->  
 
  <!--   <div><iframe srcdoc="<p>Hello world!</p>"> </iframe></div> -->
-    <iframe srcdoc="<p>Hello world!</p>"></iframe>
+
+
+    <iframe id ="info"></iframe>
+
 </div>
 
   <script src="../../lib/jquery.min.js"></script>
