--- a/AV/Development/terms.html
+++ b/AV/Development/terms.html
@@ -3,24 +3,38 @@
 
 <head>
   <title>Terms</title>
-  <script>
- /* function store(id)
-  {
-    var node = document.getElementById(id).innerHTML
-    localStorage.setItem("concept", node);
-    javascript:location.href='conceptMap.html'
-  } */
-  </script>
+   
 </head>
 
 <body>
 
-      <script type="text/javascript" src="conceptMap.js"></script>
+      
 
 <div>
-    <ul>
-    <li id="traversal" onclick="store(this.id)">traversal</li>
-    <li id="graph" onclick="store(this.id)">graph</li>
+    <li><a class="ODSAterm" href="#">graph</a></li>
+    <li><a class="ODSAterm" href="#">traversals</a></li>
+    <li><a class="ODSAterm" href="#">vector</a></li>
+    <li><a class="ODSAterm" href="#">enumerate</a></li>
+    <li><a class="ODSAterm" href="#">Shortest Paths</a></li>
+    <li><a class="ODSAterm" href="#">Topological Sort</a></li>
+    <li><a class="ODSAterm" href="#">Minimal Cost Spanning Tree</a></li>
+    <li><a class="ODSAterm" href="#">Adjacency array</a></li>
+    <li><a class="ODSAterm" href="#">Adjacency list</a></li>
+    <li><a class="ODSAterm" href="#">edges</a></li>
+    <li><a class="ODSAterm" href="#">vertices</a></li>
+    <li><a class="ODSAterm" href="#">Breadth First Search</a></li>
+    <li><a class="ODSAterm" href="#">Depth First Search</a></li>
+    <li><a class="ODSAterm" href="#">DFS based</a></li>
+    <li><a class="ODSAterm" href="#">Queue Based</a></li>
+    <li><a class="ODSAterm" href="#">Single Source</a></li>
+    <li><a class="ODSAterm" href="#">All Pairs</a></li>
+    <li><a class="ODSAterm" href="#">Prim's</a></li>
+    <li><a class="ODSAterm" href="#">Kruskal's</a></li>
+    <li><a class="ODSAterm" href="#">Floyd's</a></li>
+    <li><a class="ODSAterm" href="#">Dijkstra's</a></li>
+   <!-- <li id="traversal" onclick="store(this.id)">trave
+   rsal</li>
+    <li> <a class="ODSAterm" href="#">graph</a></li>
     <li id="vector" onclick="store(this.id)">vector</li>
     <li id="enumerate" onclick="store(this.id)">enumerate</li>
     <li id="shortestpath" onclick="store(this.id)">Shortest Paths</li>
@@ -41,10 +55,12 @@
     <li id="floyds" onclick="store(this.id)">Floyd's</li>
     <li id="dijkstras" onclick="store(this.id)">Dijkstra's</li>
 
-    </ul>    
+    </ul>   --> 
 </div>
 
-
+    <script src="../../lib/jquery.min.js"></script>
+    <script src="../../lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="conceptMap.js"></script>
 </body>
 
 
