added dirty bit and read vs write

--- a/AV/Development/BufferPoolTestAV.html
+++ b/AV/Development/BufferPoolTestAV.html
@@ -70,7 +70,8 @@
         <input size="10" name="input" id="input" type="text" />
 
         <!-- Buttons -->
-        <input type="button" id="next" name="next" value="Next" />
+        <input type="button" id="read" name="read" value="Read" />
+        <input type="button" id="write" name="write" value="Write" />
         <input type="button" id="reset" name="reset" value="Restart" />
 
       </p>
