Added an error message to getConfig() if the JSON file fails to load, adjusted some tags, classes, and CSS to supporting changing AV titles

--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -20,8 +20,8 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Shellsort Visualization</h1>
+      <td class="headerCenter avtitle">
+        Shellsort Visualization
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -44,7 +44,7 @@
     </p>
     <p>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text" 
+      <input size="60" name="arrayValues" id="arrayValues" type="text"
          placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
