--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -14,8 +14,8 @@
     <tr>
       <td class="headerLeft">
       </td>
-      <td class="headerCenter">
-        <h1>Mergesort Visualization</h1>
+      <td class="headerCenter avTitle">
+        Mergesort Visualization
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
