Altered the API for loading language JSON files so that odsaAV.js tries to automatically load the file and reset the language of common text

--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -28,11 +28,11 @@
     <p>
       <input id="run" type="button" name="run" value="Run" />
       <input id="reset" type="button" name="reset" value="Reset" />
-      <label for="arraysize">&nbsp;List size:&nbsp;</label>
+      <label id="arraysize_label" for="arraysize">&nbsp;List size:&nbsp;</label>
       <select id="arraysize"></select>
     </p>
     <p>
-      <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
+      <label id="arrayValues_label" for="arrayValues">&nbsp;Your values:&nbsp;</label>
       <input size="60" name="arrayValues" id="arrayValues" type="text"
          placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
