Array tree now can display arrays intead of traditional nodes. finizled the tree indexing exercise

--- a/AV/Development/ArrayTree.html
+++ b/AV/Development/ArrayTree.html
@@ -18,14 +18,9 @@
   <script src="arrayTreeCON.js"></script>
 
   <style>
-    .jsavarraytreenode .jsavnode:first-of-type,
-    .jsavarraytreenode .jsavnode:last-of-type {
-      border-radius: 1px;
-    }
-
-    .jsavarraytreenode {
-      margin-top: 0;
-    }
+     #arrayTree {
+       height: 300px;
+     }
   </style>
 </head>
 
@@ -34,8 +29,8 @@
 
 <div id="arrayTree"></div>
 
-<div id="array" style="height:200px; width:400px;">
-  <div id="holder"></div>
+<div id="other">
+  <div id="hello"></div>
 </div>
 
 </body>
