--- a/Exercises/Development/TreeIndexing.html
+++ b/Exercises/Development/TreeIndexing.html
@@ -17,8 +17,8 @@
       max-width: 25px;
     }
 
-    .jsavcontainer, .jsavcontainer .jsavcanvas {
-      min-height: 250px;
+    .jsavcontainer .jsavcanvas {
+      min-height: 180px;
     }
   </style>
 </head>
@@ -67,7 +67,7 @@
         </p>
         <p>
           Don't forget to include the disk access for the last node (selected
-          node) if the color is different from the parent.
+          node) if the color is different from the parent node.
         </p>
       </div>
 
