defintions displayed in iframe

--- a/AV/Development/terms.html
+++ b/AV/Development/terms.html
@@ -18,8 +18,8 @@
     <li><a class="ODSAterm" href="#">Shortest Paths</a></li>
     <li><a class="ODSAterm" href="#">Topological Sort</a></li>
     <li><a class="ODSAterm" href="#">Minimal Cost Spanning Tree</a></li>
-    <li><a class="ODSAterm" href="#">Adjacency array</a></li>
-    <li><a class="ODSAterm" href="#">Adjacency list</a></li>
+    <li><a class="ODSAterm" href="#">Adjacency Array</a></li>
+    <li><a class="ODSAterm" href="#">Adjacency List</a></li>
     <li><a class="ODSAterm" href="#">edges</a></li>
     <li><a class="ODSAterm" href="#">vertices</a></li>
     <li><a class="ODSAterm" href="#">Breadth First Search</a></li>
