--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -19,8 +19,8 @@
     <tr>
       <td class="headerLeft">
       </td>
-      <td class="headerCenter">
-        <h1>Insertion Sort Visualization</h1>
+      <td class="headerCenter avTitle">
+        Insertion Sort Visualization
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
