Completed translation changes for mergesortAV

--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -26,11 +26,11 @@
     <p>
       <input id="run" type="button" name="run" />
       <input id="reset" type="button" name="reset" />
-      <label id="arraysize_label" for="arraysize"></label>
+      <label id="arraysizeLabel" for="arraysize"></label>
       <select id="arraysize"></select>
     </p>
     <p>
-      <label id="arrayValues_label" for="arrayValues"></label>
+      <label id="arrayValuesLabel" for="arrayValues"></label>
       <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
