--- a/AV/Sorting/mergesortPRO.html
+++ b/AV/Sorting/mergesortPRO.html
@@ -13,14 +13,14 @@
   <table class="proHeaderTable">
     <tr>
       <td class="headerLeft">
-        <input type="button" id="help" name="help" value="Help" />
+        <input type="button" id="help" name="help" />
       </td>
       <td class="headerCenter">
         <p class="jsavexercisecontrols"></p>
       </td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
