Minor changes to common trie exrcise.

--- a/AV/Development/commonTriePRO.html
+++ b/AV/Development/commonTriePRO.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-  <title>BST Search</title>
+  <title>Common Trie</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <!-- <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" /> -->
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
