Started tying to make edges look better

--- a/AV/Development/ArrayTree.html
+++ b/AV/Development/ArrayTree.html
@@ -18,9 +18,24 @@
   <script src="arrayTreeCON.js"></script>
 
   <style>
-     #arrayTree {
-       height: 300px;
-     }
+    #arrayTree {
+      height: 300px;
+    }
+
+    .jsavarraytreenode {
+      border: 0;
+      background-color: rgba(0, 0, 0, 0);
+      box-shadow: none;
+      height: 45px;
+    }
+
+    .jsavarraytreenode .jsavarray {
+      margin-top: 0;
+    }
+
+    .jsavarraytreenode .jsavarray .jsavnode {
+      border-radius: 0;
+    }
   </style>
 </head>
 
