Improved common trie exercise.

--- a/AV/Development/commonTriePRO.html
+++ b/AV/Development/commonTriePRO.html
@@ -10,6 +10,24 @@
     .jsavtreenode {
       cursor: pointer;
     }
+    .jsavtreenode {
+      width: 30px;
+      height: 30px;
+      border-radius: 15px;
+
+    }
+    .jsavtreenode .jsavvalue{
+      height: 30px;
+      font-size: 14px;
+    }
+    .jsavedgelabel {
+      background-color: transparent;
+      text-shadow: 0 0 4px #fff;
+    }
+    .jsavcanvas {
+      overflow: auto;
+      height: 550px;
+    }
   </style>
 </head>
 
