--- a/AV/Development/firstFit.html
+++ b/AV/Development/firstFit.html
@@ -18,7 +18,7 @@
           <input type="button" id="help" name="help" value="Help" />
         </td>
         <td class="headerCenter">
-         <!-- <h1>First Fit Visualization</h1> -->
+         <h1>Memory Manager Visualization</h1> 
         </td>
         <td class="headerRight">
           <input type="button" id="about" name="about" value="About" />
