Added normalize.css to the list of CSS files included on each module, updated the HTML for exercises in CS3114

--- a/AV/Development/BuildHeapVisualProof.html
+++ b/AV/Development/BuildHeapVisualProof.html
@@ -12,15 +12,16 @@
 <div id="container">
   <table class="headerTable">
     <tr>
-      <td class="headerCenter">
-        <h1>Build Heap Running Time Proof</h1>
+      <td class="headerLeft"></td>
+      <td class="headerCenter avTitle">
+        Build Heap Running Time Proof
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
       </td>
     </tr>
   </table>
-  
+
   <form id="ssperform">
     <p>
       <input type="button" id="runit" name="runit" value="Run" />
