--- a/AV/Development/DijkstraAV.html
+++ b/AV/Development/DijkstraAV.html
@@ -15,21 +15,21 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Dijsktra's Shortest Path Algorithm</h1>
+      <td class="headerCenter avTitle">
+        Dijsktra's Shortest Path Algorithm
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
       </td>
     </tr>
   </table>
-  
+
   <form id="ssperform">
     <p>
       <input type="button" id="runit" name="runit" value="Run Example" />
       <input type="button" id="reset" name="reset" value="Reset" />
-	  <input type="button" id="create" value="Create Your Own Graph" />
-	  <input type="button" id="show" value="Run on your Graph"/>
+    <input type="button" id="create" value="Create Your Own Graph" />
+    <input type="button" id="show" value="Run on your Graph"/>
     </p>
   </form>
   <div class="avcontainer">
