--- a/AV/Development/graphBFS.html
+++ b/AV/Development/graphBFS.html
@@ -15,28 +15,28 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Breadth First Search Graph Transversal</h1>
+      <td class="headerCenter avTitle">
+        Breadth First Search Graph Traversal
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
       </td>
     </tr>
   </table>
-  
+
   <form id="ssperform">
     <p>
       <input type="button" id="runit" name="runit" value="Run" />
       <input type="button" id="reset" name="reset" value="Reset" />
     </p>
   </form>
-  
+
   <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline"></p>
   </div>
-</div> 
+</div>
 
 <script src="../../lib/jquery.min.js"></script>
 <script src="../../lib/jquery-ui.min.js"></script>
