--- a/AV/Hashing/hashAV.html
+++ b/AV/Hashing/hashAV.html
@@ -16,8 +16,8 @@
         <td class="headerLeft">
           <input type="button" id="help" name="help" value="Help" />
         </td>
-        <td class="headerCenter">
-          <h1>Hashing Visualization</h1>
+        <td class="headerCenter avTitle">
+          Hashing Visualization
         </td>
         <td class="headerRight">
           <input type="button" id="about" name="about" value="About" />
