--- a/AV/Sorting/bubblesortAV.html
+++ b/AV/Sorting/bubblesortAV.html
@@ -17,10 +17,9 @@
 <div id="container">
   <table class="headerTable">
     <tr>
-      <td class="headerLeft">
-      </td>
-      <td class="headerCenter">
-        <h1>Bubble Sort Visualization</h1>
+      <td class="headerLeft"></td>
+      <td class="headerCenter avTitle">
+        Bubble Sort Visualization
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -38,7 +37,7 @@
     </p>
     <p>
       <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input id="arrayValues" size="60" name="arrayValues" type="text" 
+      <input id="arrayValues" size="60" name="arrayValues" type="text"
          placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
