--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -15,8 +15,8 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Radix Sort: Linked List</h1>
+      <td class="headerCenter avTitle">
+        Radix Sort: Linked List
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -31,7 +31,7 @@
       <input type="button" id="reset" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;Array size:&nbsp;</label>
       <select id="arraysize"></select>
-      <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
+      <label for="digitsize">&nbsp;Digits:&nbsp;</label>
       <select id="digitsize">
         <option value="1"> 1 </option>
         <option selected="selected" value="2"> 2 </option>
@@ -41,7 +41,7 @@
     </p>
     <p>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text" 
+      <input size="60" name="arrayValues" id="arrayValues" type="text"
          placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
