--- a/AV/Development/HuffmanCoding.html
+++ b/AV/Development/HuffmanCoding.html
@@ -6,16 +6,20 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="HuffmanCoding.css" type="text/css" />
+  <style>
+  .avcontainer {
+    margin-top: 0;
+  }
+  </style>
 </head>
 
 <body>
 <div id="container">
   <table class="headerTable">
     <tr>
-      <td class="headerLeft">
-      </td>
-      <td class="headerCenter">
-        <h1>Huffman Coding Tree Visualization</h1>
+      <td class="headerLeft"></td>
+      <td class="headerCenter avTitle">
+        Huffman Coding Tree Visualization
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
