--- a/AV/Development/PrimAVPQ.html
+++ b/AV/Development/PrimAVPQ.html
@@ -15,15 +15,15 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Prim's Minimum Spanning Tree Algorithm (Prioirity Queue Version)</h1>
+      <td class="headerCenter avTitle">
+        Prim's Minimum Spanning Tree Algorithm (Prioirity Queue Version)
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
       </td>
     </tr>
   </table>
-  
+
   <form id="ssperform">
     <p>
       <input type="button" id="runit" name="runit" value="Run" />
