--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -12,8 +12,7 @@
 <div id="container">
   <table class="headerTable">
     <tr>
-      <td class="headerLeft">
-      </td>
+      <td class="headerLeft"></td>
       <td class="headerCenter avTitle"></td>
       <td class="headerRight">
         <input type="button" id="about" name="about" />
@@ -31,7 +30,7 @@
     </p>
     <p>
       <label id="arrayValuesLabel" for="arrayValues"></label>
-      <input size="80" name="arrayValues" id="arrayValues" type="text" />
+      <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
   <div class="avcontainer">
