--- a/AV/Sorting/quicksortDecomposeAV.html
+++ b/AV/Sorting/quicksortDecomposeAV.html
@@ -12,10 +12,9 @@
 <div id="container">
   <table class="headerTable">
     <tr>
-      <td class="headerLeft">
-      </td>
-      <td class="headerCenter">
-        <h1>Quicksort Visualization</h1>
+      <td class="headerLeft"></td>
+      <td class="headerCenter avTitle">
+        Quicksort Visualization
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
