--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -10,9 +10,10 @@
       width: 800px;
       height: 580px;
     }
-.jsavline {
-  height: 50px;
-}
+
+    .jsavline {
+      height: 50px;
+    }
   </style>
 </head>
 
@@ -23,8 +24,8 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Radix Sort: Array</h1>
+      <td class="headerCenter avTitle">
+        Radix Sort: Array
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -38,7 +39,7 @@
     <input type="button" id="reset" name="reset" value="Reset" />
     <label for="arraysize">&nbsp;Array size:&nbsp;</label>
     <select id="arraysize"></select>
-    <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
+    <label for="digitsize">&nbsp;Digits:&nbsp;</label>
     <select id="digitsize">
       <option value="1"> 1 </option>
       <option selected="selected" value="2"> 2 </option>
@@ -47,7 +48,7 @@
     </select>
     <p>
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text" 
+      <input size="60" name="arrayValues" id="arrayValues" type="text"
          placeholder="Type space-separated values, or hit 'run' to use random values" />
     </p>
   </form>
