--- a/AV/Development/InsertionSortAnalysis.html
+++ b/AV/Development/InsertionSortAnalysis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Insertion Sort Running Time Analysis</title>
+  <title>Insertion Sort Analysis</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
@@ -13,7 +13,7 @@
   <table class="headerTable">
     <tr>
       <td class="headerCenter">
-        <h1>Insertion Sort Running Time Analysis</h1>
+        <h1>Insertion Sort Worst Case Analysis</h1>
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -42,6 +42,7 @@
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
 <script src="../../JSAV/extras/binaryheap.js"></script>
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script src="InsertionSortAnalysis.js"></script>
 </body>
 </html>
