Shifted code in odsaAV, odsaMOD, and odsaUtils for better initialization and categorization, added header comments

--- a/AV/Development/HuffmanCoding.html
+++ b/AV/Development/HuffmanCoding.html
@@ -7,9 +7,13 @@
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="HuffmanCoding.css" type="text/css" />
   <style>
+  <!--
+  /* Since this AV does not have a form element, the change to the avcontainer
+  margin was covering part of the title */
   .avcontainer {
     margin-top: 0;
   }
+  -->
   </style>
 </head>
 
