working recursion exercise frontend

--- a/Exercises/RecurTutor/RecWBCProg.html
+++ b/Exercises/RecurTutor/RecWBCProg.html
@@ -113,7 +113,8 @@
 
     <textarea  id="codeTextarea">
 int largest(int[] numbers, int index) {
- // <<Missing base case>> {
+ // <<Missing base case>> 
+   {
     return numbers[index];
    }
  else if(numbers[index] > numbers[index+1]) {
@@ -129,7 +130,7 @@ int largest(int[] numbers, int index) {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-        
+         window.generatedList =  "< "+listel1 +" "+listel2 + " | " + listel3 +" "+listel4+" >";
          //return "openPop";
         </div>
       </div>
