Working on getting InsertionSortAV translation ready

--- a/AV/Sorting/InsertionSortAV.html
+++ b/AV/Sorting/InsertionSortAV.html
@@ -57,6 +57,6 @@
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
 <script src="../sortUtils.js"></script>
-<script src="insertionsortAV.js"></script>
+<script src="InsertionSortAV.js"></script>
 </body>
 </html>
