--- a/AV/Sorting/InsertionSortAV.html
+++ b/AV/Sorting/InsertionSortAV.html
@@ -19,9 +19,7 @@
     <tr>
       <td class="headerLeft">
       </td>
-      <td class="headerCenter avTitle">
-        Insertion Sort Visualization
-      </td>
+      <td class="headerCenter avTitle"></td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
         <a id="settings" class="jsavsettings" href="#">Settings</a>
@@ -56,7 +54,6 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../sortUtils.js"></script>
 <script src="InsertionSortAV.js"></script>
 </body>
 </html>
