Complete InsertionSortAV natural language translation support

--- a/AV/Sorting/InsertionSortAV.html
+++ b/AV/Sorting/InsertionSortAV.html
@@ -17,27 +17,25 @@
 <div id="container">
   <table class="headerTable">
     <tr>
-      <td class="headerLeft">
-      </td>
+      <td class="headerLeft"></td>
       <td class="headerCenter avTitle"></td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
-        <a id="settings" class="jsavsettings" href="#">Settings</a>
+        <input type="button" id="about" name="about" />
+        <a id="settings" class="jsavsettings" href="#"></a>
       </td>
     </tr>
   </table>
 
   <form id="ssperform">
     <p>
-      <input id="run" type="button" name="run" value="Run" />
-      <input id="reset" type="button" name="reset" value="Reset" />
-      <label for="arraysize">&nbsp;List size:&nbsp;</label>
+      <input id="run" type="button" name="run" />
+      <input id="reset" type="button" name="reset" />
+      <label 9d="arraysizeLabel" for="arraysize"></label>
       <select id="arraysize"></select>
     </p>
     <p>
-      <label for="arrayValues">&nbsp;Your values:&nbsp;</label>
-      <input size="60" name="arrayValues" id="arrayValues" type="text" 
-         placeholder="Type space-separated values, or hit 'run' to use random values" />
+      <label id="arrayValuesLabel" for="arrayValues"></label>
+      <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
   <div class="avcontainer">
