Second recursion programming exercise added

--- a/Exercises/RecurTutor/recwbcaprog.html
+++ b/Exercises/RecurTutor/recwbcaprog.html
@@ -108,17 +108,17 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"> Given the following recursive function, write down the missing action that should be done at the base case so that this function
-   prints the values in an array named list. The values must appear one per line in order of increasing subscript.
+   concatenate the values in an array named list and return it in a string. The values must be seprated with a space and in the order of increasing subscript.
       <br />
     </h4>
 
     <textarea  id="codeTextarea">
-void print(String[] list, int index) { 
-  if (index < list.length) 
-     //<<Missing Code>>
-  print(list, index+1);
-}
+String recursiveprint(String[] list, int index) { 
+ if (index < list.length) 
+   // <<Missing code>> 
 
+ return "";   
+}
 </textarea></p>
 
       <div class="question">
