--- a/Exercises/RecurTutor/recwbcbaprog5.html
+++ b/Exercises/RecurTutor/recwbcbaprog5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise</title>
+  <title> Recursion Programming Exercise 5</title>
   <script src="../../lib/jquery.min.js">
   </script>
   <script src="../../lib/jquery-ui.min.js">
@@ -107,21 +107,22 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Write down the missing base case for the following recursive function such that this function finds the largest number in the array named numbers:
-      <br />
+     <p class="problem" id = "test">Given the following recursive function write down the missing base case condition and the action that should be done at the base case such that this function multiply two numbers x and y. (Assume both values given are positive.)
+  <br />
     </h4>
 
-    <textarea  id="codeTextarea">
-int largest(int[] numbers, int index) {
- // <<Missing base case>> 
-   {
-    return numbers[index];
-   }
- else if(numbers[index] > numbers[index+1]) {
-    numbers[index+1] = numbers[index];
-   }
- return largest(numbers,index+1);
+<textarea  id="codeTextarea">
+int mult(int x, int y) {
+
+//<<Missing base case condition>>
+
+//<<Missing base case action>>
+
+else
+
+return mult(x-1, y) + y;
 }
+
 </textarea></p>
 
       <div class="question">
