Changes to rotation exercise.

--- a/AV/Development/rotationPRO.html
+++ b/AV/Development/rotationPRO.html
@@ -7,6 +7,12 @@
   <!-- <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" /> -->
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <link rel="stylesheet" href="BinaryPointerTree.css" type="text/css" />
+
+  <style type="text/css">
+    #layoutButton {
+      z-index: 500;
+    }
+  </style>
 </head>
 
 <body>
